--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,204 +1,157 @@
-/* =============================================================================
- *
- * Waybar configuration
- *
- * Configuration reference: https://github.com/Alexays/Waybar/wiki/Configuration
- *
- * =========================================================================== */
-
-/* -----------------------------------------------------------------------------
- * Keyframes
- * -------------------------------------------------------------------------- */
-
-/*
-Arc-Dark Color Scheme
-*/
 @import url('/home/gabriel/.cache/wal/colors-waybar.css');
 
 @keyframes blink-warning {
     70% {
-        color: white;
+        color: @cursor;
     }
 
     to {
-        color: white;
-        background-color: orange;
+        color: @cursor;
+        background-color: @color4;
     }
 }
 
 @keyframes blink-critical {
     70% {
-      color: white;
+      color: @cursor;
     }
 
     to {
-        color: white;
-        background-color: red;
+        color: @cursor;
+        background-color: @color4;
     }
 }
 
-/* -----------------------------------------------------------------------------
- * Base styles
- * -------------------------------------------------------------------------- */
-
-/* Reset all styles */
 * {
     border: none;
-    border-radius: 0;
-    min-height: 0;
-    margin: 1px;
-    padding: 0;
+    margin: 0.1em 0.2em 0.1em 0.2em;
 }
 
-/* The whole bar */
-#waybar {
-    background: transparent;
-    color: @foreground;
-    background-color: @background;
-    font-family: UbuntuMono;
-    font-size: 14px;
+window#waybar {
+    background: alpha(@background, 0.8);
+    color: @cursor;
+    font-family: "Font Awesome 5 Pro", Roboto, Helvetica, Arial, sans-serif;
+    font-size: 12px;
 }
 
-/* Every modules */
-#battery,
-#clock,
-#backlight,
-#cpu,
-#custom-keyboard-layout,
-#memory,
-#mode,
-#custom-weather,
-#network,
-#pulseaudio,
-#temperature,
-#tray,
-#idle_inhibitor,
-#custom-PBPbattery {
-    padding: 0.5rem 0.6rem;
-    margin: 1px 0px;
+window.eDP-1 * {
+    font-size: 10px;
 }
 
-/* -----------------------------------------------------------------------------
- * Modules styles
- * -------------------------------------------------------------------------- */
-
-#battery {
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+window#waybar.hidden {
+    opacity: 0.2;
 }
 
-#battery.warning {
-    color: orange;
+/* If workspaces is the leftmost module, omit left margin */
+.modules-left > widget:first-child > #workspaces {
+    margin-left: 0;
 }
 
-#battery.critical {
-    color: red;
-}
-
-#battery.warning.discharging {
-    animation-name: blink-warning;
-    animation-duration: 3s;
-}
-
-#battery.critical.discharging {
-    animation-name: blink-critical;
-    animation-duration: 2s;
-}
-
-#cpu.warning {
-    color: orange;
-}
-
-#cpu.critical {
-    color: red;
-}
-
-#memory {
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-
-#memory.warning {
-    color: orange;
- }
-
-#memory.critical {
-    color: red;
-    animation-name: blink-critical;
-    animation-duration: 2s;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-
-#mode {
-    background: @color11;
-    border-bottom: 3px transparent;
-    color: white;
-    margin-left: 5px;
-    padding: 7px;
-}
-
-#network.disconnected {
-    color: orange;
-}
-
-#pulseaudio {
-    padding-top: 6px;
-}
-
-#pulseaudio.muted {
-    color: @color11;
-}
-
-#temperature.critical {
-    color: red;
-}
-
-#window {
-    font-weight: bold;
-}
-
-#workspaces {
-    font-size: 13px;
+/* If workspaces is the rightmost module, omit right margin */
+.modules-right > widget:last-child > #workspaces {
+    margin-right: 0;
 }
 
 #workspaces button {
-    border-bottom: 3px solid transparent;
-    margin-bottom: 0px;
-    padding: 0px;
+    padding: 0 10px;
+    background: transparent;
+    border-radius: 3;
 }
 
 #workspaces button.focused {
-    border-bottom: 3px solid @color11;
-    margin-bottom: 1px;
-    padding-left: 0;
+    background-color: @color4;
+}
+
+#workspaces button:hover {
+    background: alpha(@color4, 0.8);
 }
 
 #workspaces button.urgent {
-    border-color: #c9545d;
-    color: #c9545d;
+    background-color: #eb4d4b;
 }
 
-#custom-power {
-    margin-left: 15px;
-    margin-right: 15px;
-    font-size: 15px;
+#mode {
+    background: @color4;
 }
 
-#custom-launcher {
-    font-size: 15px;
-    margin-left: 15px;
-    margin-right: 10px;
+#clock,
+#battery,
+#cpu,
+#memory,
+#disk,
+#temperature,
+#backlight,
+#network,
+#pulseaudio,
+#custom-media,
+#tray,
+#mode,
+#idle_inhibitor,
+#custom-audio_idle_inhibitor,
+#mpd,
+#language,
+#custom-gpu-usage,
+#custom-launcher,
+#custom-power,
+#custom-display,
+#custom-audio,
+#custom-weather,
+#idle_inhibitor {
+    padding: 0 10px 0 8px;
+    color: #ffffff;
+    border-radius: 3;
+    background: @color3;
 }
 
-#backlight.icon {
-    padding-right: 1px;
-    font-size: 13px;
+#battery.critical:not(.charging) {
+    background-color: #f53c3c;
+    color: #ffffff;
+    animation-name: blink;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
-* {
-    padding: 0;
-    margin: 0;
+#custom-media {
+    min-width: 100px;
+}
+
+#custom-media.custom-spotify {
+    background: #66cc99;
+    color: #2a5c45;
+}
+
+#custom-media.custom-vlc {
+    background: #ffa000;
+}
+
+#temperature.critical {
+    background: #eb4d4b;
+}
+
+#tray > .passive {
+    -gtk-icon-effect: dim;
+}
+
+#tray > .needs-attention {
+    -gtk-icon-effect: highlight;
+    background-color: #eb4d4b;
+}
+
+#mpd {
+    background-color: #66cc99;
+    color: #2a5c45;
+}
+
+#mpd.disconnected {
+    background-color: #f53c3c;
+}
+
+#mpd.stopped {
+    background-color: #90b1b1;
+}
+
+#mpd.paused {
+    background-color: #51a37a;
 }
