fix: add style to waybar keyboard-state

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -90,6 +90,7 @@ window#waybar.hidden {
 #custom-audio_idle_inhibitor,
 #mpd,
 #language,
+#keyboard-state,
 #custom-gpu-usage,
 #custom-launcher,
 #custom-power,
